###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "rclone",
    version = "1.69.0",
)

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")

# Workaround
# https://github.com/bazelbuild/rules_go/issues/3799#issuecomment-1880035642
bazel_dep(name = "circl", version = "1.3.7")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.0")
# Alternatively, use the host system's Go SDK.
#go_sdk.host()

#bazel_dep(name = "rules_proto", version = "6.0.2")
#bazel_dep(name = "protobuf", version = "28.2", repo_name = "com_google_protobuf")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_a8m_tree",
    "com_github_aalpar_deheap",
    "com_github_abbot_go_http_auth",
    "com_github_anacrolix_dms",
    "com_github_anacrolix_log",
    "com_github_atotto_clipboard",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_s3_manager",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_smithy_go",
    "com_github_azure_azure_sdk_for_go_sdk_azcore",
    "com_github_azure_azure_sdk_for_go_sdk_azidentity",
    "com_github_azure_azure_sdk_for_go_sdk_storage_azblob",
    "com_github_azure_azure_sdk_for_go_sdk_storage_azfile",
    "com_github_azure_go_ntlmssp",
    "com_github_buengese_sgzip",
    "com_github_cloudsoda_go_smb2",
    "com_github_colinmarc_hdfs_v2",
    "com_github_coreos_go_semver",
    "com_github_coreos_go_systemd_v22",
    "com_github_dop251_scsu",
    "com_github_dropbox_dropbox_sdk_go_unofficial_v6",
    "com_github_files_com_files_sdk_go_v3",
    "com_github_gabriel_vasile_mimetype",
    "com_github_gdamore_tcell_v2",
    "com_github_go_chi_chi_v5",
    "com_github_go_darwin_apfs",
    "com_github_go_git_go_billy_v5",
    "com_github_golang_jwt_jwt_v4",
    "com_github_google_uuid",
    "com_github_hanwen_go_fuse_v2",
    "com_github_henrybear327_go_proton_api",
    "com_github_henrybear327_proton_api_bridge",
    "com_github_jcmturner_gokrb5_v8",
    "com_github_jlaffaye_ftp",
    "com_github_josephspurrier_goversioninfo",
    "com_github_jzelinskie_whirlpool",
    "com_github_klauspost_compress",
    "com_github_koofr_go_httpclient",
    "com_github_koofr_go_koofrclient",
    "com_github_mattn_go_colorable",
    "com_github_mattn_go_runewidth",
    "com_github_max_sum_base32768",
    "com_github_minio_minio_go_v7",
    "com_github_mitchellh_go_homedir",
    "com_github_moby_sys_mountinfo",
    "com_github_ncw_swift_v2",
    "com_github_oracle_oci_go_sdk_v65",
    "com_github_patrickmn_go_cache",
    "com_github_pkg_sftp",
    "com_github_pkg_xattr",
    "com_github_pmezard_go_difflib",
    "com_github_prometheus_client_golang",
    "com_github_protonmail_go_crypto",
    "com_github_putdotio_go_putio_putio",
    "com_github_quasilyte_go_ruleguard_dsl",
    "com_github_rclone_gofakes3",
    "com_github_rfjakob_eme",
    "com_github_rivo_uniseg",
    "com_github_rogpeppe_go_internal",
    "com_github_shirou_gopsutil_v3",
    "com_github_sirupsen_logrus",
    "com_github_skratchdot_open_golang",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_t3rm1n4l_go_mega",
    "com_github_unknwon_goconfig",
    "com_github_willscott_go_nfs",
    "com_github_winfsp_cgofuse",
    "com_github_xanzy_ssh_agent",
    "com_github_youmark_pkcs8",
    "com_github_yunify_qingstor_sdk_go_v3",
    "in_gopkg_validator_v2",
    "in_gopkg_yaml_v2",
    "io_etcd_go_bbolt",
    "io_goftp_server_v2",
    "io_storj_uplink",
    "org_bazil_fuse",
    "org_golang_google_api",
    "org_golang_x_crypto",
    "org_golang_x_exp",
    "org_golang_x_mobile",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_text",
    "org_golang_x_time",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto legacy"],
    path = "github.com/colinmarc/hdfs/v2",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto legacy"],
    path = "storj.io/common",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    path = "github.com/cronokirby/saferith",
    build_extra_args = [
        # This test file declares `package big` rather than `package saferith`.
        "-exclude=arith_s390x_test.go",
    ],
)
go_deps.gazelle_override(
    path = "storj.io/picobuf",
    directives = ["gazelle:proto legacy"],
)
go_deps.gazelle_override(
    path = "storj.io/eventkit",
    directives = ["gazelle:proto legacy"],
)
