load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "completion.go",
        "help.go",
        "progress.go",
        "selfupdate_enabled.go",
        "siginfo_bsd.go",
        "siginfo_others.go",
    ],
    importpath = "github.com/rclone/rclone/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//fs",
        "//fs/accounting",
        "//fs/cache",
        "//fs/config",
        "//fs/config/configfile",
        "//fs/config/configflags",
        "//fs/config/flags",
        "//fs/filter",
        "//fs/filter/filterflags",
        "//fs/fserrors",
        "//fs/fspath",
        "//fs/log",
        "//fs/log/logflags",
        "//fs/operations",
        "//fs/rc",
        "//fs/rc/rcflags",
        "//fs/rc/rcserver",
        "//fs/sync",
        "//lib/atexit",
        "//lib/buildinfo",
        "//lib/exitcode",
        "//lib/terminal",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@org_golang_x_text//cases:go_default_library",
        "@org_golang_x_text//language:go_default_library",
    ],
)
