load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fs",
    srcs = [
        "backend_config.go",
        "bits.go",
        "bwtimetable.go",
        "config.go",
        "config_list.go",
        "configmap.go",
        "countsuffix.go",
        "cutoffmode.go",
        "daemon_other.go",
        "daemon_unix.go",
        "deletemode.go",
        "dir.go",
        "dir_wrapper.go",
        "direntries.go",
        "dump.go",
        "enum.go",
        "features.go",
        "fingerprint.go",
        "fs.go",
        "log.go",
        "metadata.go",
        "mimetype.go",
        "mount_helper.go",
        "newfs.go",
        "open_options.go",
        "override.go",
        "override_dir.go",
        "pacer.go",
        "parseduration.go",
        "parsetime.go",
        "registry.go",
        "sizesuffix.go",
        "terminalcolormode.go",
        "tristate.go",
        "types.go",
        "version.go",
        "versioncheck.go",
        "versionsuffix.go",
        "versiontag.go",
    ],
    importpath = "github.com/rclone/rclone/fs",
    visibility = ["//visibility:public"],
    deps = [
        "//fs/config/configmap",
        "//fs/config/configstruct",
        "//fs/fserrors",
        "//fs/fspath",
        "//fs/hash",
        "//lib/errcount",
        "//lib/pacer",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "fs_test",
    srcs = [
        "backend_config_test.go",
        "bits_test.go",
        "bwtimetable_test.go",
        "config_list_test.go",
        "config_test.go",
        "countsuffix_test.go",
        "cutoffmode_test.go",
        "direntries_test.go",
        "dump_test.go",
        "enum_test.go",
        "fingerprint_test.go",
        "fs_test.go",
        "log_test.go",
        "metadata_test.go",
        "mount_helper_test.go",
        "newfs_test.go",
        "open_options_test.go",
        "override_dir_test.go",
        "override_test.go",
        "parseduration_test.go",
        "parsetime_test.go",
        "sizesuffix_test.go",
        "terminalcolormode_test.go",
        "tristate_test.go",
    ],
    embed = [":fs"],
    deps = [
        "//fs/config/configmap",
        "//fs/fserrors",
        "//fs/hash",
        "//fs/object",
        "//fstest/mockdir",
        "//fstest/mockfs",
        "//fstest/mockobject",
        "//lib/pacer",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
