load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "librclone_lib",
    srcs = ["librclone.go"],
    cgo = True,
    importpath = "github.com/rclone/rclone/librclone",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/all",
        "//cmd/cmount",
        "//cmd/mount",
        "//cmd/mount2",
        "//fs/operations",
        "//fs/sync",
        "//lib/plugin",
        "//librclone/librclone",
    ],
)

go_binary(
    name = "librclone",
    embed = [":librclone_lib"],
    visibility = ["//visibility:public"],
)
