load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vfs",
    srcs = [
        "dir.go",
        "dir_handle.go",
        "errors.go",
        "file.go",
        "rc.go",
        "read.go",
        "read_write.go",
        "vfs.go",
        "vstate_string.go",
        "write.go",
    ],
    embedsrcs = ["vfs.md"],
    importpath = "github.com/rclone/rclone/vfs",
    visibility = ["//visibility:public"],
    deps = [
        "//fs",
        "//fs/accounting",
        "//fs/cache",
        "//fs/chunkedreader",
        "//fs/dirtree",
        "//fs/hash",
        "//fs/list",
        "//fs/log",
        "//fs/operations",
        "//fs/rc",
        "//fs/walk",
        "//vfs/vfscache",
        "//vfs/vfscache/writeback",
        "//vfs/vfscommon",
        "@com_github_go_git_go_billy_v5//:go-billy",
        "@org_golang_x_text//unicode/norm",
    ],
)

go_test(
    name = "vfs_test",
    srcs = [
        "dir_handle_test.go",
        "dir_test.go",
        "errors_test.go",
        "file_test.go",
        "open_test.go",
        "rc_test.go",
        "read_test.go",
        "read_write_test.go",
        "vfs_case_test.go",
        "vfs_test.go",
        "vfstest_test.go",
        "write_test.go",
    ],
    embed = [":vfs"],
    deps = [
        "//backend/all",
        "//cmd/mountlib",
        "//fs",
        "//fs/operations",
        "//fs/rc",
        "//fstest",
        "//fstest/mockfs",
        "//fstest/mockobject",
        "//lib/random",
        "//vfs/vfscommon",
        "//vfs/vfstest",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_text//unicode/norm",
    ],
)
