load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "all",
    srcs = ["all.go"],
    importpath = "github.com/rclone/rclone/backend/all",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/alias",
        "//backend/azureblob",
        "//backend/azurefiles",
        "//backend/b2",
        "//backend/box",
        "//backend/cache",
        "//backend/chunker",
        "//backend/combine",
        "//backend/compress",
        "//backend/crypt",
        "//backend/drive",
        "//backend/dropbox",
        "//backend/fichier",
        "//backend/filefabric",
        "//backend/filescom",
        "//backend/ftp",
        "//backend/gofile",
        "//backend/googlecloudstorage",
        "//backend/googlephotos",
        "//backend/hasher",
        "//backend/hdfs",
        "//backend/hidrive",
        "//backend/http",
        "//backend/imagekit",
        "//backend/internetarchive",
        "//backend/jottacloud",
        "//backend/koofr",
        "//backend/linkbox",
        "//backend/local",
        "//backend/mailru",
        "//backend/mega",
        "//backend/memory",
        "//backend/netstorage",
        "//backend/onedrive",
        "//backend/opendrive",
        "//backend/oracleobjectstorage",
        "//backend/pcloud",
        "//backend/pikpak",
        "//backend/pixeldrain",
        "//backend/premiumizeme",
        "//backend/protondrive",
        "//backend/putio",
        "//backend/qingstor",
        "//backend/quatrix",
        "//backend/s3",
        "//backend/seafile",
        "//backend/sftp",
        "//backend/sharefile",
        "//backend/sia",
        "//backend/smb",
        "//backend/storj",
        "//backend/sugarsync",
        "//backend/swift",
        "//backend/ulozto",
        "//backend/union",
        "//backend/uptobox",
        "//backend/webdav",
        "//backend/yandex",
        "//backend/zoho",
    ],
)
