load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "azureblob",
    srcs = [
        "azureblob.go",
        "azureblob_unsupported.go",
    ],
    importpath = "github.com/rclone/rclone/backend/azureblob",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//fs",
            "//fs/chunksize",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fserrors",
            "//fs/fshttp",
            "//fs/hash",
            "//fs/walk",
            "//lib/bucket",
            "//lib/encoder",
            "//lib/env",
            "//lib/multipart",
            "//lib/pacer",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//bloberror",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//container",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//sas",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//service",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "azureblob_test",
    srcs = [
        "azureblob_internal_test.go",
        "azureblob_test.go",
    ],
    embed = [":azureblob"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//fs",
            "//fstest",
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert",
        ],
        "//conditions:default": [],
    }),
)
